Fix deploy script: Force reset to avoid local changes blocking pull

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,9 @@ jobs:
           script: |
             cd /var/www/easyfix/easyfix
 
-            # Pull latest changes
-            git pull origin main
+            # Discard local changes and pull latest
+            git fetch origin
+            git reset --hard origin/main
 
             # Install dependencies
             composer install --no-dev --optimize-autoloader --no-interaction
